# SSL

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: delta-ctrl-no-effect.md  half-faders-dead.md
.planning/phases/01-compatibility-verification/: .continue-here.md  01-01-PLAN.md  01-02-PLAN.md  01-CONTEXT.md  01-RESEARCH.md
.planning/phases/02-capabilities-audit/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md  CAPABILITIES.md
.planning/phases/03-console-surface-features/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-advanced-workflow-features/: .continue-here.md  04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-terminal-ui/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-CONTEXT.md  05-RESEARCH.md  05-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: ssl
ssl-matrix-client/: __init__.py  __main__.py  audit.py  cli.py  client.py  models.py  protocol.py  sigma_client.py  sigma_models.py  sigma_protocol.py  ssl_theme.tcss  templates.py  tui.py  tui_commands.py  tui_views.py  tui_widgets.py
ssl-matrix-client/handlers/: __init__.py  chan_presets.py  channels.py  connection.py  delta.py  profiles.py  projects.py  routing.py  sigma.py  softkeys.py  total_recall.py  xpatch.py
ssl-matrix-client/tui/: __init__.py  __main__.py  app.py  bridge.py  matrix.tcss
ssl-matrix-client/tui/widgets/: __init__.py  channels.py  daw_layers.py  inserts.py  project.py  status_bar.py  total_recall.py  xpatch.py
tests/: conftest.py  test_client.py  test_handler_chan_presets.py  test_handler_channels.py  test_handler_connection.py  test_handler_delta.py  test_handler_profiles.py  test_handler_projects.py  test_handler_routing.py  test_handler_softkeys.py  test_handler_total_recall.py  test_handler_xpatch.py  test_models.py  test_protocol.py  test_sigma_client.py  test_sigma_handlers.py  test_sigma_models.py  test_sigma_protocol.py  test_split.py  test_templates.py  test_tui.py  test_watchdog.py
