[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssl-console-client"
version = "0.1.0"
description = "Reverse-engineered Python client for controlling SSL mixing consoles (Matrix, Duality, AWS) over Ethernet"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Kolton Jacobs" }]
keywords = ["ssl", "mixing-console", "audio", "matrix", "duality", "aws", "udp", "remote-control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
]
dependencies = ["textual>=0.80.0"]

[project.urls]
Homepage = "https://github.com/koltyj/SSL"
Repository = "https://github.com/koltyj/SSL"
Issues = "https://github.com/koltyj/SSL/issues"
Documentation = "https://github.com/koltyj/SSL#readme"
Changelog = "https://github.com/koltyj/SSL/blob/main/CHANGELOG.md"

[project.scripts]
ssl-console = "ssl_matrix_client.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1,<2",
    "pre-commit>=3,<5",
    "pytest>=7,<9",
    "pytest-asyncio>=0.23",
    "ruff>=0.9",
    "twine>=5,<7",
]

[tool.hatch.build.targets.sdist]
include = [
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "README.md",
    "SECURITY.md",
    "SUPPORT.md",
    "pyproject.toml",
    "ssl-matrix-client/",
    "tests/",
]

[tool.hatch.build.targets.wheel]
packages = ["ssl-matrix-client"]

[tool.hatch.build.targets.wheel.sources]
"ssl-matrix-client" = "ssl_matrix_client"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "SIM", "RUF"]
ignore = ["E501", "SIM105"]
